changing rate limit values to be set in properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.h2.console.enabled=true
 
 test.jwt.expiration=30000
 test.jwt.secret=testSecret
+
+authentication.rate.capacity=20
+authentication.rate.tokens=20
+authentication.rate.duration.min=1
